tests/NormalTests/paczka2/big_fuzzy/23225664.err
Error in line 5: aqRUeOUqF0 A789 41,5
Error in line 11: ZwFAv2 A96 1,2
Error in line 14: MAHL84TKd A789 54,7
Error in line 15: ZwFAv2 A789 43,7
Error in line 39: A96 A96 6,2
Error in line 28: aqRUeOUqF0 S565 66,8
Error in line 49: bVsjQjGEAv AZ89 26,6
Error in line 50: bVsjQjGEAv A789 18,6
Error in line 44: aqRUeOUqF0 A68 80,6
Error in line 63: jkWt A96 44,5
Error in line 70: MAHL84TKd A789 -1,3
Error in line 66: MAHL84TKd A789 23,6
Error in line 64: ZwFAv2 A789 65,2
Error in line 81: A96 A68 91,3
Error in line 77: jkWt A68 59,3
Error in line 79: ZwFAv2 A96 38,0
Error in line 86: ZwFAv2 A789 63,5
Error in line 74: 3ch5i A96 8,6
Error in line 90: A96 A96 20,1
Error in line 113: bVsjQjGEAv A789 2,7
Error in line 105: 3ch5i A789 51,0
Error in line 126: bVsjQjGEAv A96 9,4
Error in line 139: A96 S565 64,5
Error in line 149: $VsjQjGEAv A96 324,4
Error in line 147: bVsjQjGEAv A96 68,3
Error in line 155: bVsjQjGEAv A68 19,3
Error in line 159: bVsjQjGEAv A96 -1,4
Error in line 157: bVsjQjGEAv A96 10,8
Error in line 154: A96 A68 373,9
Error in line 185: aqRUeOUqF0 A96 23,3
Error in line 189: jkWt S565 32,6
Error in line 195: A96 A68 13,2
Error in line 205: MAHL84TKd S565 10,6
Error in line 170: 3ch5i A789 56,0
Error in line 219: jkWt A68 94,75
Error in line 206: aqRUeOUqF0 S565 221,0
Error in line 220: aqRUeOUqF0 A68 21,7
Error in line 211: MAHL84TKd A789 67,9
Error in line 231: aqRUeOUqF0 S565 -1,6
Error in line 221: aqRUeOUqF0 S565 43,7
